fix dark mode

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,2 @@
 @import "tailwindcss";
 @plugin "tailwindcss-primeui";
-
-:root {
-  color-scheme: light !important;
-}
